--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,4 @@
-@import 'vendor/zurb/foundation/scss/foundation.scss';
-@include foundation-everything;
-
+@import url(https://necolas.github.io/normalize.css/3.0.2/normalize.css);
 @import 'node_modules/font-awesome/scss/font-awesome.scss';
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900);
 
@@ -8,24 +6,58 @@ $blue-light: #5589A9;
 $blue-dark: #293C45;
 $orange: #EB6E57;
 
-$gray-light: #F3F3F3;
-$gray-mid: #6A6A6A;
-$gray-dark: #656565;
+$white: #ffffff;
+$gray-light: #fbfbfb;
+$gray-back: #f3f3f3;
+$gray-secondary: #b5b6b7;
+$gray-dark: #666666;
+
+$text-primary: #5e646b;
+$text-secondary: #848484;
 
 $black: #323232;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 400;
+}
+
+body {
+  background: $gray-back;
+}
+
+.clearfix:before, .clearfix:after {
+  content: " ";
+  display: table;
+}
+
+.clearfix:after {
+  clear: both;
+}
 
 .container {
   font-family: 'Roboto';
   color: $black;
-  max-width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
+  font-weight: 300;
 }
 
 header {
   background: $gray-light;
-  color: $gray-mid;
+  color: $gray-dark;
   height: 60px;
-  @include clearfix()
+  line-height: 60px;
   &:before {
     position: absolute;
     display: block;
@@ -37,152 +69,199 @@ header {
     background: $gray-light;
     z-index: -1;
   }
-  .logo {
-    float: left;
-    font-size: 36px;
-    padding: 0 15px;
-  }
-  .page-links {
-    float: left;
-    list-style: none;
-    margin: 0;
-    font-weight: 500;
-    .link {
-      display: inline-block;
+}
+
+.logo {
+  float: left;
+  font-size: 25px;
+  padding: 0 15px;
+}
+
+.page-links {
+  float: left;
+  list-style: none;
+  font-size: .9em;
+  font-weight: 400;
+  margin-left: 20px;
+  li {
+    display: inline-block;
+    a {
+      text-decoration: none;
+      color: $text-primary;
       margin: 15px 15px;
-      &:hover {
-        cursor: pointer;
-        border-bottom: 2px solid $gray-mid;
-      }
     }
   }
-  .user-actions {
-    list-style: none;
-    margin: 10px 0;
-    float: right;
-    .action {
-      display: block;
-      float: left;
-      margin: 5px 15px;
-    }
-    .user {
-      display: block;
-      float: left;
-      .photo {
-        margin: 0 5px 0 15px;
-        border-radius: 10px;
-        overflow: hidden;
-        img {
-          height: 35px;
-          width: auto;
-        }
-      }
-      .photo, .toggle {
-        display: block;
-        float: left;
-      }
-      .toggle {
-        margin: 5px 15px 0 0;
-      }
+}
+
+.user-actions {
+  list-style: none;
+  float: right;
+  font-size: 1em;
+}
+
+.action {
+  display: block;
+  float: left;
+  margin: 0 20px;
+}
+
+.user {
+  display: block;
+  float: left;
+
+  .photo {
+    margin: 0 5px 0 15px;
+    height: 25px;
+    width: 25px;
+    border-radius: 4px;
+    position: relative;
+    top: 5px;
+
+    img {
+      height: 25px;
+      width: auto;
     }
   }
-  .user-menu {
-    position: absolute;
-    display: none;
+
+  .photo, .toggle {
+    display: block;
+    float: left;
   }
+
+  .toggle {
+    margin: 0 15px 0 0;
+  }
+}
+
+.user-menu {
+  position: absolute;
+  display: none;
 }
 
 .main-content {
   margin-top: 30px;
-  .panel-content {
-    padding: 30px;
+}
+
+.panel-content {
+  padding: 30px;
+}
+
+.side-panel {
+  float: right;
+  width: 30%;
+}
+
+.panel-tab {
+  background: $white;
+  margin-top: 30px;
+  padding: 20px 0;
+  h3 {
+    font-size: 1em;
+    color: $text-primary;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 0 30px;
   }
-  .side-panel {
-    float: right;
-    width: 30%;
-    .my-challenges, .most-popular {
-      margin-top: 30px;
-      .title {
-        font-size: 18px;
-        font-weight: 600;
-        background: $gray-light;
-        border: 1px solid $gray-dark;
-        padding: 15px 30px;
+
+  hr {
+    background-color: $gray-back;
+    border: 0;
+    height: 1px;
+    margin-top: 15px;
+  }
+
+  ul {
+    list-style: none;
+    margin: 0 30px;
+    color: $gray-dark;
+    font-size: .9em;
+    li {
+      clear: both;
+      margin: 10px 0;
+      padding: 15px 0;
+      .name {
+        color: $text-secondary;
+        float: left;
       }
-      .challenges {
-        list-style: none;
-        margin: 0 30px;
-        color: $gray-dark;
-        .challenge {
-          margin: 10px 0;
-          @include clearfix()
-          .name {
-            float: left;
-          }
-          .users {
-            float: right;
-            i {
-              padding: 0 5px;
-            }
-          }
+      .users {
+        float: right;
+        color: $gray-secondary;
+        i {
+          padding: 0 5px;
         }
       }
-
     }
   }
-  .main-panel {
+}
+
+.main-panel {
+  float: left;
+  width: 70%;
+}
+
+.challenge {
+  float: left;
+  margin: 30px 0;
+  height: 175px;
+  width: 100%;
+  background: $white;
+  color: $text-primary;
+
+  .thumbnail {
+    color: $gray-light;
     float: left;
-    width: 70%;
-    .challenge {
-      float: left;
-      clear: left;
+    position: relative;
+    width: 175px;
+    height: 175px;
+    padding: 15px;
+    margin-right: 30px;
+  }
+
+  &:nth-of-type(3n-2) {
+    .thumbnail {
+      background: $blue-light;
+    }
+  }
+  &:nth-of-type(3n-1) {
+    .thumbnail {
+      background: $orange;
+    }
+  }
+  &:nth-of-type(3n) {
+    .thumbnail {
+      background: $blue-dark;
+    }
+  }
+
+  .about {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    border-left: none;
+
+    h2 {
+      font-weight: 400;
+      font-size: 1.4em;
+    }
+
+    .creator {
+      margin: 0;
+      color: $gray-secondary;
+      font-size: .9em;
+      font-weight: 300;
+      margin: 5px 0;
+      span {
+        font-weight: 400;
+      }
+    }
+
+    .short-description {
       margin: 20px 0;
-      height: 200px;
-      &:nth-of-type(3n-2) {
-        .remaining {
-          background: $blue-light;
-        }
-      }
-      &:nth-of-type(3n-1) {
-        .remaining {
-          background: $orange;
-        }
-      }
-      &:nth-of-type(3n) {
-        .remaining {
-          background: $blue-dark;
-        }
-      }
-      .remaining {
-        color: $gray-light;
-        float: left;
-        width: 200px;
-        height: 100%;
-        padding: 15px;
-      }
-      .about {
-        float: left;
-        width: 500px;
-        height: 100%;
-        padding: 15px;
-        border: 1px solid $gray-dark;
-        border-left: none;
-        background: $gray-light;
-        .name {
-          font-size: 28px;
-          font-weight: 600;
-          line-height: 24px;
-          margin: 0;
-        }
-        .creator {
-          margin: 0;
-          color: $gray-dark;
-        }
-        .short-description {
-          margin: 15px 0;
-          line-height: 28px;
-        }
-      }
+      font-weight: 300;
+      color: $text-secondary;
+      font-size: .85em;
+      line-height: 28px;
     }
   }
 }
